- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    6.1.0 Beta3
- 
    None
- 
        
- 
        506463fe8ae0125f18d6236db9b7cd8b99885d08 (qt/qtdeclarative/dev) ce452b70e158461b021aa47faf5cce87964b6cf7 (qt/qtdeclarative/6.1) bcd7b0fe55355d7d4de7d38a0c8a22e5c0e1e6aa (qt/qtdeclarative/6.1.0)
Error:
E:\vcpkg_folders\qt6\buildtrees\qtdeclarative\src\.1.0-beta3-d084bd5c16.clean\src\qml\jsruntime\qv4enginebase_p.h(91): warning C4200: nonstandard extension used: zero-sized array in struct/union E:\vcpkg_folders\qt6\buildtrees\qtdeclarative\src\.1.0-beta3-d084bd5c16.clean\src\qml\jsruntime\qv4enginebase_p.h(91): note: This member will be ignored by a defaulted constructor or copy/move assignment operator E:\vcpkg_folders\qt6\buildtrees\qtdeclarative\src\.1.0-beta3-d084bd5c16.clean\src\qml\jsruntime\qv4enginebase_p.h(92): error C2229: struct 'QV4::EngineBase' has an illegal zero-sized array
relevant code
    quint8 padding2[QT_POINTER_SIZE - sizeof(quint32)];
does not work for 32 bit.
| For Gerrit Dashboard: QTBUG-92562 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 342645,3 | QV4EngineBase: Do not create zero-sized array on 32 bit platforms | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 342678,2 | QV4EngineBase: Do not create zero-sized array on 32 bit platforms | 6.1.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 342679,2 | QV4EngineBase: Do not create zero-sized array on 32 bit platforms | 6.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |