QV4EngineBase: Do not create zero-sized array on 32 bit platforms

Zero-sized arrays are a non-standard extension, and do not work on MSVC.
We can instead conditionally add an explicit padding member on platforms
where POINTER_SIZE == 8.

Fixes: QTBUG-92562
Change-Id: I8462eb05e16c42045c0c95f026321c6e20e5c6bb
Reviewed-by: Maximilian Goldstein <max.goldstein@qt.io>
(cherry picked from commit 506463fe8ae0125f18d6236db9b7cd8b99885d08)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>